test_regress/t/t_class_static_this_bad.out
%Error: t/t_class_static_this_bad.v:12:14: Cannot use 'this' in a static method 'get_this' (IEEE 1800-2023 8.10-8.11)
                                         : ... note: In instance 't'
   12 |       return this;
      |              ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
